--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,7 @@
     font-family: 'Inter', system-ui, -apple-system, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
   }
 
   /* Heading hierarchy with refined medical elegance */
